# prefect-ocr-test

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt
